tests/neg/type_alias_collision_func.baa
// EXPECT: متصادم مع اسم نوع بديل

نوع حساب = ص٣٢.

صحيح حساب() {
    إرجع ٠.
}

صحيح الرئيسية() {
    إرجع ٠.
}
